Fix stylesheet and script link paths in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shanthiniketan College CRM — Admissions & Student Management</title>
   <meta name="description" content="Simple CRM for SHANTHINIKETAN college admissions and student management. Students and Admins can view; only Admins can add/edit." />
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="role-student">
   <header>
@@ -313,6 +313,6 @@
       © <span id="year"></span> SHANTHINIKETAN College CRM. View for students; manage for Admins.
     </footer>
   </div>
-  <script src="/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
