--- a/index.html
+++ b/index.html
@@ -313,6 +313,6 @@
       © <span id="year"></span> SHANTHINIKETAN College CRM. View for students; manage for Admins.
     </footer>
   </div>
-  <script src="index.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
